corrected line break on stick posts.

--- a/css/main.less
+++ b/css/main.less
@@ -1223,6 +1223,9 @@ body.map-fullscreen .fullscreen-map, body.map-fullscreen .fullscreen-map.map-con
 	.box-shadow(inset 0 0 30px rgba(0,0,0,0.2));
 	height: 100%;
 	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	color: #96979C;
 	position: relative;
 	z-index: 10;
